my-service-eval.yml
apiVersion: v1
kind: Service
metadata:
  name: user-api-service
  labels:
    app: user-api
spec:
  type: ClusterIP
  selector:
    app: user-api
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
      name: http
