my-ingress-eval.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: user-api-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: user-api-service
            port:
              number: 80
      - path: /users
        pathType: Prefix
        backend:
          service:
            name: user-api-service
            port:
              number: 80
      - path: /status
        pathType: Prefix
        backend:
          service:
            name: user-api-service
            port:
              number: 80
